:art:(calendar): Fix overflow for event names

--- a/static/components/nylas-calendar.less
+++ b/static/components/nylas-calendar.less
@@ -74,7 +74,6 @@ body.platform-win32 {
   .calendar-event {
     @interval-height: 21px;
     position: absolute;
-    padding: 4px 5px 5px 6px;
     font-size: 11px;
     line-height: 11px;
     font-weight: 500;
@@ -89,6 +88,9 @@ body.platform-win32 {
     display: flex;
     cursor: default;
     .default-header {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin: 4px 5px 5px 6px;
       cursor: default;
       opacity: 0.7;
       flex: 1;
